fixed issues with styling on project component, where the hover effect was misaligned

--- a/src/components/Project/project.css
+++ b/src/components/Project/project.css
@@ -4,15 +4,14 @@
     position: relative;
     display: flex;
     align-items: center;
-    margin-top: 5vh;
-    margin-bottom: 5px;
+    height: 25vh;
+    width: 25vw;
+    
 }
 
-.img-container img {
-    max-height: 100%;
-    max-width: 100%;
-    height: auto;
-    width: auto;
+.project-container img {
+    height: 100%;
+    width: 100%;
     object-fit: 100%;
 }
 
@@ -39,5 +38,5 @@
     height: 100%;
     width: 100%;
     visibility: visible;
-    opacity: 0.85; 
+    opacity: 1; 
 }
